--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-<h1>Welcome</h1>
+<%- include("./partials/header") %>
+<head>
+	<link rel="stylesheet" href="/css/index.css">
+</head>
+<body>
+	<%- include("./partials/nav.ejs") %>
+</body>
