add: core nav has been styled and layout corrected

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,6 +1,71 @@
 .core-nav {
   background-color: #000080;
-  padding: .5rem; }
-  .core-nav ul li a {
-    font-size: 2rem;
-    color: #fdfdfd; }
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2rem; }
+  .core-nav--logo {
+    padding: 1rem;
+    border-radius: 1.5rem;
+    transition: background-color .3s ease-in-out; }
+    .core-nav--logo img {
+      width: 12rem; }
+    .core-nav--logo:hover {
+      background-color: #3460F2; }
+  .core-nav--links {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+    list-style: none;
+    height: 100%; }
+    .core-nav--links li {
+      height: 100%;
+      padding: 1rem;
+      border-radius: 1.5rem;
+      transition: background-color .3s ease-in-out;
+      text-align: center;
+      cursor: pointer; }
+      .core-nav--links li a {
+        color: #fdfdfd;
+        font-size: 2rem;
+        text-decoration: none;
+        font-weight: 800;
+        text-transform: uppercase; }
+      .core-nav--links li:hover {
+        background-color: #3460F2; }
+  .core-nav--actions {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    list-style: none;
+    height: 100%; }
+    .core-nav--actions li {
+      height: 100%;
+      padding: 1rem;
+      border-radius: 1.5rem;
+      transition: background-color .3s ease-in-out, border-color .3s ease-in-out;
+      text-align: center;
+      border: .1rem solid transparent;
+      cursor: pointer; }
+      .core-nav--actions li a {
+        color: #fdfdfd;
+        font-size: 2rem;
+        text-decoration: none;
+        transition: color .3s ease-in-out;
+        text-transform: uppercase;
+        font-weight: 800; }
+    .core-nav--actions .white-bordered {
+      border: 0.1rem solid #fdfdfd;
+      border-radius: 1.5rem; }
+      .core-nav--actions .white-bordered:hover {
+        background-color: rgba(255, 255, 255, 0.3); }
+    .core-nav--actions .non-bordered {
+      color: #000080;
+      background-color: #fdfdfd; }
+      .core-nav--actions .non-bordered:hover {
+        background-color: #3460F2;
+        border-color: transparent; }
+        .core-nav--actions .non-bordered:hover a {
+          color: #fdfdfd; }
+      .core-nav--actions .non-bordered a {
+        color: #000080; }
