--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,10 +2,19 @@
 	<link rel="stylesheet" href="/css/nav.css">
 </head>
 <nav class="core-nav">
-	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="/">Home</a></li>
-		<li><a href="/">Home</a></li>
-		<li><a href="/">Home</a></li>
+	<div class="core-nav--logo">
+		<a href="/">
+			<img src="/images/core/Logo_01.png" alt="lucky-lotto logo">
+		</a>
+	</div>
+	<ul class="core-nav--links">
+		<li><a href="/games">Games</a></li>
+		<li><a href="/results">Results</a></li>
+		<li><a href="/">About</a></li>
+		<li><a href="/">Contact</a></li>
+	</ul>
+	<ul class="core-nav--actions">
+		<li class="white-bordered"><a href="/login">Join</a></li>
+		<li class="non-bordered"><a href="/Register">Sign In</a></li>
 	</ul>
 </nav>
