--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
 <head>
 	<link rel="stylesheet" href="/css/global.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
