fix: nav using correct route names, added missing routes, pasted the boiler-plate html for every ejs file

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,14 +8,14 @@
 		</a>
 	</div>
 	<ul class="core-nav--links">
-		<li><a href="/games">Games</a></li>
+		<li><a href="/browse_games">Games</a></li>
 		<li><a href="/results">Results</a></li>
-		<li><a href="/">About</a></li>
-		<li><a href="/">Contact</a></li>
+		<li><a href="/about">About</a></li>
+		<li><a href="/contact">Contact</a></li>
 	</ul>
 	<ul class="core-nav--actions">
 		<li class="white-bordered"><a href="/login">Join</a></li>
-		<li class="non-bordered"><a href="/Register">Sign In</a></li>
+		<li class="non-bordered"><a href="/register">Sign In</a></li>
 	</ul>
 
 	<div class="mobile-toggle-btn">
