fix: register route complete, changed incorrect 401 errors to 400 errors

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,8 +14,8 @@
 		<li><a href="/contact">Contact</a></li>
 	</ul>
 	<ul class="core-nav--actions">
-		<li class="white-bordered"><a href="/login">Join</a></li>
-		<li class="non-bordered"><a href="/register">Sign In</a></li>
+		<li class="white-bordered"><a href="/register">Join</a></li>
+		<li class="non-bordered"><a href="/login">Sign In</a></li>
 	</ul>
 
 	<div class="mobile-toggle-btn">
