fix: users can now login, redirects if account has not been confirmed and no request uploaded, disallows users loggin in if they have been banned/blacklisted

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -89,6 +89,10 @@
 				return onError(`[${serverResponse.code}]: `+serverResponse.msg);
 			}
 
+			if (serverResponse.data.needsToVerify) {
+				return window.location.href = "/submit_verifaction"
+			}
+
 			window.location.href = "/";
 		}
 
